# ShigureTGBot

./: .env  .gitignore  LICENSE  README.md  bot.py  poetry.toml  pyproject.toml
.github/workflows/: black.yml
src/plugins/about/: __init__.py  __main__.py
src/plugins/base/: __init__.py  cmd.py  const.py  rule.py  util.py
src/plugins/cache/: __init__.py  __main__.py
src/plugins/data/: __init__.py  __main__.py
src/plugins/delete/: __init__.py  __main__.py
src/plugins/error/: __init__.py  __main__.py
src/plugins/netease/: __init__.py  __main__.py  async_wrapper.py  config.py  data_source.py  lrc_parser.py
src/plugins/nonebot_plugin_callapi/: __init__.py  __main__.py  config.py
src/plugins/nonebot_plugin_crazy_thursday/: #original repo.txt  __init__.py  config.py  post.json
src/plugins/nonebot_plugin_picmcstat/: __main__.py  draw.py  util.py
src/plugins/nonebot_plugin_picstatus/: __init__.py  __main__.py  config.py  draw.py  statistics.py  util.py
src/plugins/nonebot_plugin_random_stereotypes/: #original repo.txt  __init__.py  data.py
src/plugins/pixiv_sync/: __init__.py  __main__.py  config.py  data_source.py  util.py
src/plugins/sexpic/: __init__.py  __main__.py  config.py
src/plugins/start/: __init__.py  __main__.py
src/plugins/zhenxun_plugin_meiriyiju/: #original repo.txt  __init__.py
src/plugins/zhenxun_plugin_meiriyiju/resource/: post.json
