[tool.poetry]
name = "ShigureTGBot"
version = "0.1.1"
description = "ShigureTGBot"
authors = ["student_2333 <lgc2333@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
"nonebot2[httpx]" = ">=2.0.0b4"
httpx = ">=0.23.0"
nonebot-adapter-telegram = ">=0.1.0b2"

[tool.poetry.dev-dependencies]
nb-cli = ">=0.6.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
